--- a/campaigns.html
+++ b/campaigns.html
@@ -78,13 +78,15 @@
                     <div class="infosect__descr row">
                         <div class="col-md-6">
                             <p>
-                                Since 2015, Skytel has been <b>one of the leading telecommunications companies</b> in Georgia,
+                                Since 2015, Skytel has been <b>one of the leading telecommunications companies</b> in
+                                Georgia,
                                 ranking among the top three Internet providers.
                             </p>
                         </div>
                         <div class="col-md-6">
                             <p>
-                                Skytel collaborates with up to <b>2,000 private companies and 4,000 public sector entities.</b>
+                                Skytel collaborates with up to <b>2,000 private companies and 4,000 public sector
+                                    entities.</b>
                                 As one of the foremost telecommunication companies, Skytel offers high-quality services,
                                 competitive rates, a flexible payment system,
                                 and personal manager services to partner organizations and the public sector.
@@ -95,6 +97,271 @@
                 <div class="infosect__bottom">
                     <img src="img/campaigns/img1.jpg" alt="image">
                     <img src="img/campaigns/img2.jpg" alt="image">
+                </div>
+            </div>
+        </section>
+
+        <section class="banner">
+            <div class="container">
+                <div class="banner__inner">
+                    <img src="img/campaigns/background.jpg" alt="Background" class="banner__bg">
+                    <h2 class="banner__title">
+                        If you run out of money in your balance, you can activate a credit of only 2 GEL and enjoy 7
+                        days of uninterrupted internet and television services
+                    </h2>
+
+                    <div class="banner__info">
+                        <div class="banner__col">
+                            <p>
+                                The fee for using the credit is
+                            </p>
+                            <span>
+                                2 GEL
+                            </span>
+                        </div>
+                        <div class="banner__col">
+                            <p>
+                                The credit can be used for
+                            </p>
+                            <span>
+                                7 days
+                            </span>
+                            <p>
+                                after activation
+                            </p>
+                        </div>
+                        <div class="banner__col">
+                            <p>
+                                The credit can be activated within
+                            </p>
+                            <span>
+                                5 calendar days
+                            </span>
+                            <p>
+                                after the balance is exhausted
+                            </p>
+                        </div>
+                    </div>
+
+                    <p class="banner__bottom">
+                        Detailed Terms:<br>
+                        To activate the credit, please contact us at 032 500 300 from the registered contact number.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="tabsect">
+            <div class="container">
+                <div class="tabsect__inner">
+                    <div class="tabs">
+                        <a href="#wireless-internet" class="tab active">
+                            Wireless Internet
+                        </a>
+                        <a href="#fiber-optic-internet" class="tab">
+                            Fiber-Optic Internet
+                        </a>
+                        <a href="#tv" class="tab">
+                            TV
+                        </a>
+                    </div>
+                    <div class="tab-wrapper">
+                        <div class="tab-body active" id="wireless-internet">
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    Wireless Internet
+                                </h4>
+                                <p class="name">
+                                    50 GEL
+                                </p>
+                                <p class="speed">
+                                    6 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Standard
+                                </p>
+                                <h4 class="kind">
+                                    Wireless Internet
+                                </h4>
+                                <p class="name">
+                                    85 GEL
+                                </p>
+                                <p class="speed">
+                                    10 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    Wireless Internet
+                                </h4>
+                                <p class="name">
+                                    50 GEL
+                                </p>
+                                <p class="speed">
+                                    6 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                        </div>
+                        <div class="tab-body" id="fiber-optic-internet">
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    Fiber-Optic Internet
+                                </h4>
+                                <p class="name">
+                                    12 GEL
+                                </p>
+                                <p class="speed">
+                                    3 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Standard
+                                </p>
+                                <h4 class="kind">
+                                    Fiber-Optic Internet
+                                </h4>
+                                <p class="name">
+                                    5 GEL
+                                </p>
+                                <p class="speed">
+                                    16 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    Fiber-Optic Internet
+                                </h4>
+                                <p class="name">
+                                    55 GEL
+                                </p>
+                                <p class="speed">
+                                    36 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                        </div>
+                        <div class="tab-body" id="tv">
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    TV
+                                </h4>
+                                <p class="name">
+                                    25 GEL
+                                </p>
+                                <p class="speed">
+                                    8 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Standard
+                                </p>
+                                <h4 class="kind">
+                                    TV
+                                </h4>
+                                <p class="name">
+                                    95 GEL
+                                </p>
+                                <p class="speed">
+                                    15 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                            <div class="tab-card">
+                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                <p class="type">
+                                    Business Basic
+                                </p>
+                                <h4 class="kind">
+                                    TV
+                                </h4>
+                                <p class="name">
+                                    55 GEL
+                                </p>
+                                <p class="speed">
+                                    16 Mb/s
+                                </p>
+                                <p class="text">
+                                    Installation 100 GEL
+                                </p>
+                                <a href="#" class="button">
+                                    Order
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
