--- a/campaigns.html
+++ b/campaigns.html
@@ -167,8 +167,7 @@
                     </div>
                     <div class="tab-wrapper">
                         <div class="tab-body active" id="wireless-internet">
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -184,12 +183,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Standard
                                 </p>
@@ -205,12 +203,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -226,14 +223,13 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
+                                </span>
+                            </a>
                         </div>
                         <div class="tab-body" id="fiber-optic-internet">
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -249,12 +245,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Standard
                                 </p>
@@ -270,12 +265,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -291,14 +285,13 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
+                                </span>
+                            </a>
                         </div>
                         <div class="tab-body" id="tv">
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -314,12 +307,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Standard
                                 </p>
@@ -335,12 +327,11 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
-                            <div class="tab-card">
-                                <img src="img/campaigns/card compaign.png" alt="Background">
+                                </span>
+                            </a>
+                            <a href="#" class="tab-card">
                                 <p class="type">
                                     Business Basic
                                 </p>
@@ -356,10 +347,10 @@
                                 <p class="text">
                                     Installation 100 GEL
                                 </p>
-                                <a href="#" class="button">
+                                <span class="button">
                                     Order
-                                </a>
-                            </div>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
