--- a/products-services.html
+++ b/products-services.html
@@ -165,10 +165,13 @@
                                         </div>
                                     </div>
                                     <div class="bottom-row">
+                                        <div class="swiper-button-prev">
+                                            <img src="img/products/prev.png" alt="prev">
+                                        </div>
                                         <div class="swiper-pagination"></div>
-                                        <a href="#" class="play-btn">
-                                            <img src="img/products/play.png" alt="play">
-                                        </a>
+                                        <div class="swiper-button-next">
+                                            <img src="img/products/play.png" alt="next">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -216,10 +219,13 @@
                                         </div>
                                     </div>
                                     <div class="bottom-row">
+                                        <div class="swiper-button-prev">
+                                            <img src="img/products/prev.png" alt="prev">
+                                        </div>
                                         <div class="swiper-pagination"></div>
-                                        <a href="#" class="play-btn">
-                                            <img src="img/products/play.png" alt="play">
-                                        </a>
+                                        <div class="swiper-button-next">
+                                            <img src="img/products/play.png" alt="next">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -285,7 +291,7 @@
                                             </a>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="#" class="srvslidewrap">
+                                            <a href="#" class="srvslidewrap special">
                                                 <p class="tar">Setanta Sports</p>
                                                 <p class="name">Thematic</p>
                                                 <p class="title">5 GEL</p>
@@ -305,10 +311,13 @@
                                         </div>
                                     </div>
                                     <div class="bottom-row">
+                                        <div class="swiper-button-prev">
+                                            <img src="img/products/prev.png" alt="prev">
+                                        </div>
                                         <div class="swiper-pagination"></div>
-                                        <a href="#" class="play-btn">
-                                            <img src="img/products/play.png" alt="play">
-                                        </a>
+                                        <div class="swiper-button-next">
+                                            <img src="img/products/play.png" alt="next">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -433,7 +442,188 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="tabs">
+                        <a href="#all" class="tab active">
+                            All
+                        </a>
+                        <a href="#movies" class="tab">
+                            Movies
+                        </a>
+                        <a href="#georgian" class="tab">
+                            Georgian 
+                        </a>
+                    </div>
+                    <div class="tab-wrapper">
+                        <div class="tab-body active" id="all">
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    360 TuneBox
+                                </h4>
+                                <img class="icon" src="img/products/360-tune-box.png" alt="360 tune box">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    ტოკ ტვ
+                                </h4>
+                                <img class="icon" src="img/products/tok-tv.png" alt="ტოკ ტვ">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    ფორმულა
+                                </h4>
+                                <img class="icon" src="img/products/chanel.png" alt="channel">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AZ TV
+                                </h4>
+                                <img class="icon" src="img/products/az-tv.png" alt="AZ TV">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AMEDIA HIT HD
+                                </h4>
+                                <img class="icon" src="img/products/amedia.png" alt="AMEDIA HIT HD">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    CBC
+                                </h4>
+                                <img class="icon" src="img/products/cbc.png" alt="CBC">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    Fashion Box
+                                </h4>
+                                <img class="icon" src="img/products/fashionbox.png" alt="Fashion Box">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    FOOD network
+                                </h4>
+                                <img class="icon" src="img/products/food.png" alt="FOOD network">
+                            </a>
+                            
+                        </div>
+                        <div class="tab-body" id="movies">
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    ფორმულა
+                                </h4>
+                                <img class="icon" src="img/products/chanel.png" alt="channel">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AZ TV
+                                </h4>
+                                <img class="icon" src="img/products/az-tv.png" alt="AZ TV">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    FOOD network
+                                </h4>
+                                <img class="icon" src="img/products/food.png" alt="FOOD network">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AMEDIA HIT HD
+                                </h4>
+                                <img class="icon" src="img/products/amedia.png" alt="AMEDIA HIT HD">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    CBC
+                                </h4>
+                                <img class="icon" src="img/products/cbc.png" alt="CBC">
+                            </a>
+                        </div>
+                        <div class="tab-body" id="georgian">
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    360 TuneBox
+                                </h4>
+                                <img class="icon" src="img/products/360-tune-box.png" alt="360 tune box">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    ტოკ ტვ
+                                </h4>
+                                <img class="icon" src="img/products/tok-tv.png" alt="ტოკ ტვ">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AZ TV
+                                </h4>
+                                <img class="icon" src="img/products/az-tv.png" alt="AZ TV">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    AMEDIA HIT HD
+                                </h4>
+                                <img class="icon" src="img/products/amedia.png" alt="AMEDIA HIT HD">
+                            </a>
+                            <a href="#" class="tab-card">
+                                <p class="type">
+                                    Main Page
+                                </p>
+                                <h4 class="kind">
+                                    ფორმულა
+                                </h4>
+                                <img class="icon" src="img/products/chanel.png" alt="channel">
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn bluebtn" data-bs-dismiss="modal">Close</button>
